# Hunter-Adams-RP2040-Demos

./: CMakeLists.txt
Final_Project/: CMakeLists.txt  animation_FFT_Attempt2.c  animation_FFT_FAIL.c  fft.c  fft_musicStuff.c
Lab_2/: CMakeLists.txt  animation.c  animation_both_cores_part2.c  animation_cheats.c  animation_core_part3.c  animation_with_both_cores_optimize1.c  animation_with_predator.c  boids1.c  boids2.c  boids3.c  boids4.c  boids5.c  hsync.pio  rgb.pio  vsync.pio
Lab_3/: CMakeLists.txt  PID_controller.c  imu_demo.c
Music_Animation/: CMakeLists.txt  animation.c  animation_2.c  animation_3.c  boids5.c  hsync.pio  rgb.pio  vga_graphics_8bit.c  vsync.pio
Music_Animation2/: CMakeLists.txt  animation_3.c  animation_4.c  animation_5.c  animation_6.c  animation_7.c  bins32_compressed.m  rgb.pio  rgb2.pio  vga256_graphics.c  vga256_graphics.h  vga256_graphics_demo.c  vga256_graphics_hsv2.c  vga256_graphics_image.c
VGA_8bit_demo/: CMakeLists.txt  hsync.pio  rgb2.pio.txt  vga256_graphics.c  vga256_graphics_demo.c  vga256_graphics_hsv.c  vsync.pio
